14-07-06    Email sending returns PEAR errors on fails, this was not checked
            properly
14-07-06    Updates fixed on generated modules
12-06-06    Fixed bug where detect missing perms didn't work on windows installs
            (Marian Seitner)
30-05-06    Fixed bug where dbdo links creation task was missing from install, only
            available on rebuild
IMPROVEMENTS
13-08-06    Classic theme replaces 'default', 'default' deleted
10-08-06    Module config files can now be edited via admin GUI
            (Julien Casanova)
10-08-06    Improved header injection testing as per
            http://asg.web.cmu.edu/rfc/rfc822.html#sec-3.1.1
            (rofranco)
09-08-06    Default RSS block now configurable (Werner Krauss)
09-08-06    Implemented open_basedir detection (Steven Stremciuc)
06-08-06    Added perms on category file views (Werner Krauss)
06-08-06    Implemented improved wizard functionality based on PEAR's
            HTML_QuickForm_Controller (Malaney J. Hill)
05-08-06    Implemented full module install/uninstall for admin users
05-08-06    Renamed DA_Default::retrieveAllModules to DA_Default::getModuleHash()
            to improve clarity
02-08-06    Added regex tests for SGL_Sql::parse() (Randy Casburn)
01-08-06    Added a security step in installer (Steven Stremciuc)
01-08-06    Implemented admin GUI for ContentTypeMgr (AJ Tarachanowicz)
30-07-06    A big update to the Polish translation (Thomas Osmialowski)
30-07-06    XML_Parser error avoided by inspecting allow_url_fopen setting
            (Steven Stremciuc)
29-07-06    Extracted execution from SGL_Sql::parseAndExecute(), added ability to
            extract all table names from a schema file
27-07-06    Added possibility to customise defaults in installer (Eric Persson)
27-07-06    Minimal modules and no sample data are now defaults
27-07-06    Removed dependencies between blocks and sections, you can now install
            blocks only when the relevant module is installed