@@ -31,7 +31,7 @@
     <script type="text/javascript" src="{webRoot}/js/hack-IE-hover.js"></script>
 
     {foreach:javascriptSrc,file}
-    <script type="text/javascript" src="{webRoot}/js/{file}"></script>
+    <script type="text/javascript" src="{webRoot}/{file}"></script>
     {end:}
 
     {if:wysiwyg}
