@@ -34,7 +34,7 @@
     <script type="text/javascript" src="{webRoot}/js/mainPublic.js"></script>
 
     {foreach:javascriptSrc,file}
-    <script type="text/javascript" src="{webRoot}/js/{file}"></script>
+    <script type="text/javascript" src="{webRoot}/{file}"></script>
     {end:}
 
     {if:wysiwyg}
