@@ -50,7 +50,7 @@ class Navigation_Block_CategoryNav
     function init($output)
     {
         SGL::logMessage(null, PEAR_LOG_DEBUG);
-        $output->javascriptSrc[] = 'TreeMenu.js';
+        $output->javascriptSrc[] = 'js/TreeMenu.js';
         return $this->getBlockContent();
     }
 
