@@ -16,6 +16,10 @@ BUGFIXES
 30-05-06    Fixed bug where dbdo links creation task was missing from install, only
             available on rebuild
 IMPROVEMENTS
+14-08-06    Adding a javascript file to a manager must now be done with the path
+            from the webroot.
+                old way: $input->javascriptSrc = array('jscalendar/calendar.js')
+                new way: $input->javascriptSrc = array('js/jscalendar/calendar.js')
 13-08-06    Classic theme replaces 'default', 'default' deleted
 10-08-06    Module config files can now be edited via admin GUI
             (Julien Casanova)
